<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reservationDesServices">

    <include
        android:id="@+id/include"
        layout="@layout/cellule_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateResa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/date_reservation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <EditText
        android:id="@+id/dateChoisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/format_jj_mm_aaaa"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/dateResa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toEndOf="@+id/dateResa"
        app:layout_constraintTop_toTopOf="@+id/dateResa" />

    <TextView
        android:id="@+id/quantiteReserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/quantiteReserve"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateResa" />

    <EditText
        android:id="@+id/nbService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/par_ex_3"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/quantiteReserve"
        app:layout_constraintEnd_toEndOf="@+id/dateChoisi"
        app:layout_constraintStart_toStartOf="@+id/dateChoisi"
        app:layout_constraintTop_toTopOf="@+id/quantiteReserve" />

    <TextView
        android:id="@+id/coutResa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/coutResa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nbService" />

    <TextView
        android:id="@+id/prixTotalResa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/prixTotalResa"
        app:layout_constraintBottom_toBottomOf="@+id/coutResa"
        app:layout_constraintStart_toEndOf="@+id/coutResa"
        app:layout_constraintTop_toTopOf="@+id/coutResa" />

    <Button
        android:id="@+id/DemanderResa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/DemanserResa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coutResa"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/AnnulerResa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/AnnulerResa"
        app:layout_constraintBottom_toBottomOf="@+id/DemanderResa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/DemanderResa"
        app:layout_constraintTop_toTopOf="@+id/DemanderResa" />

</androidx.constraintlayout.widget.ConstraintLayout>